# SjarkSimulator

./: .gitignore  AGENTS.md  BACKLOG.md  Dockerfile  Dockerfile.humble  GUIDELINES.md  LICENSE  Plans.md  README.md  TESTING.md  build_docker.sh  build_overview_docker.sh  common_scripts.sh  run_docker.sh  run_docker_min.sh  test_docker.sh  tmux.conf
.codex/: AGENTS.md  BACKLOG.md
.github/workflows/: docker-image.yml
latex/: Dockerfile  Makefile  build_overview.sh  main.tex  overview.tex
latex/figures/: integrator_drift.tikz  integrator_error.tikz  integrator_tumbling.tikz  integrator_tumbling_error.tikz  los_example.tikz  open_end.tikz  sampling_density.tikz
latex/scripts/: generate_figures.py
latex/sections/: common.tex  control.tex  maintenance.tex  planning.tex  simulator.tex
src/controller/: CMakeLists.txt  package.xml
src/controller/launch/: controller_launch.py
src/controller/src/: throttle.cpp
src/launch/: CMakeLists.txt  package.xml
src/msg_definitions/: CMakeLists.txt  package.xml
src/na_controller/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/na_controller/launch/: controller_launch.py
src/na_controller/na_controller/: controller_node.py  los.py
src/na_controller/src/: throttle.cpp
src/na_controller/test/: test_los_enu.py  test_los_ned.py
src/na_launch/: package.xml  setup.cfg  setup.py
src/na_launch/config/: sim_controller_params.yaml  sim_controller_params_6dof.yaml
src/na_launch/launch/: controller_launch.py  sim_controller_6dof_launch.py  sim_controller_launch.py
src/na_launch/plot_juggler/: 6dof.xml  default.xml
src/na_launch/rviz/: default.rviz
src/na_launch/test/: test_path_following_3dof_launch.py  test_path_following_6dof_launch.py  test_pipeline_launch.py  test_sim_6dof_launch.py  test_urdf_publisher.py
src/na_launch/urdf/: boat.urdf
src/na_msg/: CMakeLists.txt  package.xml
src/na_msg/msg/: BsplinePath.msg  ControllerState.msg  Path.msg
src/na_planner/: package.xml  setup.cfg  setup.py
src/na_planner/na_planner/: planner_node.py
src/na_sim/: package.xml  setup.cfg  setup.py
src/na_sim/na_sim/: Boat3DOF.py  fossen.py  sim_demo.py  sim_node.py
src/na_sim/test/: test_enu_conventions.py  test_fossen_integrators.py  test_fossen_math.py  test_fossen_model.py  test_ned_conventions.py  (+1 more)
src/na_utils/: package.xml  setup.cfg  setup.py
src/na_viz/: package.xml  setup.cfg  setup.py
src/rviz/: CMakeLists.txt  package.xml
src/sj_controller/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/sj_launch/: package.xml  setup.cfg  setup.py
src/sj_msg/: CMakeLists.txt  package.xml
src/sj_planner/: package.xml  setup.cfg  setup.py
src/sj_sim/: package.xml  setup.cfg  setup.py
src/sj_utils/: package.xml  setup.cfg  setup.py
src/sj_viz/: package.xml  setup.cfg  setup.py
(+46 files in other folders)
